Fixed layout issues

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -33,7 +33,7 @@ body {
 /*---------LINKS-------------*/
 .link {
 	display: inline-block;
-	margin: 10px;
+	margin: 25px 10px;
 	padding: 5px 10px;
 	transition: background 0.5s, font-size 0.5s, color 0.5s, border 0.5s, border-radius 0.5s;
 }
